--- a/css/detail.css
+++ b/css/detail.css
@@ -87,8 +87,8 @@ header ul li a {
   text-align: center;
 }
 .arrow a:hover {
-  color: #ffee32;
-  background-color: #c86bfa;
+  color: #ffffff;
+  background-color: #575757;
 }
 /* item number in cart */
 
